--- a/html/index.html
+++ b/html/index.html
@@ -1,34 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primera practica HTML</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
-     <!--Esto es un comentario-->
-     <h1>Sara Arias Londoño</h1><!--MAS GRANDE-->
-     <p>Terminar mis estudios y aportar mis conocimientos para el desarrollo de aplicaciones que faciliten el diario vivir de las personas, también en el corto plazo de 2 a 4 anios ir avanzando en el ámbito profesional hasta conseguir un nivel Senior o Tech Lead.</p>
-     <hr>
-     <h2>Hola</h2>
-     <hr>
-     <h3>Comandos terminal</h3>
-     <ol>
-        <li>ls</li>
-        <li>pwd</li>
-        <li>clear</li>
-        <li>mkdir</li>
-        <li>touch</li>
-     </ol>
-     <hr>
-     <h4>Hola</h4>
-     <a href="https://es.wikipedia.org/wiki/Hola_mundo">Hola Mundo</a>
-     <hr>
-     <h5>Comandos HTML</h5>
-     <a href="./comandos.html">Comandos</a>
-     <hr>
-     <h6>Hola</h6><!--MAS PEQUEÑO-->
-     <hr>
+    <!--Esto es un comentario-->
+    <!--<h1>Sara Arias Londoño</h1><MAS GRANDE-->
+    <!--<p>Terminar mis estudios y aportar mis conocimientos para el desarrollo de aplicaciones que faciliten el diario
+        vivir de las personas, también en el corto plazo de 2 a 4 anios ir avanzando en el ámbito profesional hasta
+        conseguir un nivel Senior o Tech Lead.</p>
+    <hr>
+    <h2>Hola</h2>
+    <hr>-->
+
+    <!--<section>
+        <h3>Comandos terminal</h3>
+        <ol>
+            <li>ls</li>
+            <li>pwd</li>
+            <li>clear</li>
+            <li>mkdir</li>
+            <li>touch</li>
+        </ol>
+    </section>-->
+
+    <!--<div>
+        <hr>
+        <h4>Hola</h4>
+        <a href="https://es.wikipedia.org/wiki/Hola_mundo">Hola Mundo</a>
+        <hr>
+        <h5>Comandos HTML</h5>
+        <a href="./comandos.html">Comandos</a>
+        <hr>
+        <h6>Hola</h6><MAS PEQUEÑO-->
+        <!--<hr>
+        <p>Lorem ipsum dolor sit amet
+            consectetur, adipisicing elit.
+            Dolores harum velit ipsam amet
+            corrupti fuga blanditiis officiis
+            culpa debitis. Deserunt possimus
+            aperiam debitis eum temporibus ab
+            sit odio. Maiores, exercitationem.</p>
+
+    </div>-->
+
+    <!--<div class="abueno">
+        <div class="padre">
+            <p>Hugo</p>
+            <p>Paco</p>
+            <p>Luis</p>
+            <div class="bisnieto">
+                <span>Bisnieto</span>
+            </div>
+            <p>Primo</p>
+            <div class="sobrino">Sobrino </div>
+        </div>
+        <div class="hermano">
+            <span>Nieto</span>
+        </div>
+    </div>-->
+
+    <main>
+        <div class="header">Encabezado</div>
+        <div class="column">Uno</div><div 
+        class="column">Dos</div><div 
+        class="column">Tres</div>
+        <div class="footer">Pie de pagina</div>
+    </main>
+
+
+
 </body>
+
 </html>
