--- a/html/index.html
+++ b/html/index.html
@@ -74,6 +74,13 @@
         <div class="footer">Pie de pagina</div>
     </main>
 
+    <article>
+        <h1>HTML semantico</h1>
+        <p>Sara</p>
+        <p>Arias</p>
+        <p>Articulo</p>
+    </article>
+
 
 
 </body>
