--- a/html/form.html
+++ b/html/form.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Formulario</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <main class="page">
         <h1>Contacto</h1>
@@ -23,14 +25,51 @@
             <div class="form-group">
                 <fieldset>
                     <legend>Presupuesto</legend>
-                    <input type="radio">
+                    <input id="15000" name="budget" type="radio">
+                    <label for="15000">15.000</label>
+
+                    <input id="10000" name="budget" type="radio">
+                    <label for="10000">10.000</label>
+
+                    <input id="5000" name="budget" type="radio">
+                    <label for="5000">5.000</label>
                 </fieldset>
+
+                <div class="help">Este presupuesto es la base no el total.</div>
 
             </div>
 
+            <div class="form-group">
+                <label for="select-comnidad">Tipo de proyecto</label>
+                <select name="select" id="select-comnidad" required>
+                    <option disabled selected value="">Seleccione uno</option>
+                    <option>Website</option>
+                    <option>Webapp</option>
+                    <option>Mobile</option>
+                    <option>Diseño</option>
+                </select>
+
+            </div>
+
+            <div class="form-group">
+                <label for="description">Descripcion</label>
+                <textarea required></textarea>
+                <div class="help">Describe elproyecto al menos en 500 palabras</div>
+            </div>
+
+            <div class="form-group">
+                <label for="terms">
+                    <input id="terms" type="checkbox" required>
+                    <span>Acepto terminos y condiciones</span>
+                </label>
+            </div>
+
+
+
             <button>Enviar</button>
         </form>
-        
+
     </main>
 </body>
+
 </html>
